unpackaged/main/default/objects/Contact/fields/account_no__c.field-meta.xml
<CustomField>
    <fullName>account_no__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account no</label>
    <type>Text</type>
</CustomField>