unpackaged/main/default/objects/Contact/fields/Contact_updated__c.field-meta.xml
<CustomField>
    <fullName>Contact_updated__c</fullName>
    <label>Contact updated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>