unpackaged/main/default/objects/Contact/fields/email_check__c.field-meta.xml
<CustomField>
    <fullName>email_check__c</fullName>
    <formula>LEFT( Account.Owner.FirstName , 2)&amp;RIGHT( Account.Owner.LastName , 2)&amp; &quot;@gmail.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>email check</label>
    <type>Text</type>
</CustomField>