unpackaged/main/default/objects/Contact/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <formula>FirstName  &amp; &#39; &#39;  &amp;   LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full name</label>
    <type>Text</type>
</CustomField>