unpackaged/main/default/objects/Contact/fields/high_priority__c.field-meta.xml
<CustomField>
    <fullName>high_priority__c</fullName>
    <formula>if
(
 ISPICKVAL( Account.Priority__c , &quot;high&quot;) ,
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>high priority</label>
    <type>Checkbox</type>
</CustomField>