unpackaged/main/default/objects/Contact/validationRules/First_name_and_last_name_check.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_and_last_name_check</fullName>
    <active>false</active>
    <errorConditionFormula>UPPER( FirstName )  =  UPPER( LastName )</errorConditionFormula>
    <errorMessage>First name and last name should not be the same</errorMessage>
</ValidationRule>