unpackaged/main/default/objects/Contact/validationRules/HomePhone_is_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>HomePhone_is_not_empty</fullName>
    <active>false</active>
    <errorConditionFormula>Not
(
NOT 
(
ISBLANK( HomePhone ) 
)
)</errorConditionFormula>
    <errorMessage>Homephone should not be empty.</errorMessage>
</ValidationRule>