unpackaged/main/default/objects/Contact/validationRules/Phone_no_should_be_empty_or_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_no_should_be_empty_or_10_digits</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
LEN( Phone )=0,
LEN( Phone )=10 
)</errorConditionFormula>
    <errorMessage>Account no should be mumerals and 8 characters length.</errorMessage>
</ValidationRule>