unpackaged/main/default/objects/Contact/validationRules/Priority_change_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_change_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	 ISPICKVAL(PRIORVALUE(Priority__c ), &quot;high&quot;), 
	 ISPICKVAL(Priority__c, &quot;low&quot;)
)</errorConditionFormula>
    <errorMessage>Priority can&#39;t be changed from high to low</errorMessage>
</ValidationRule>